dspdm-services/deploy/backend-production.yaml
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  name: dspdmservice
spec:
  replicas: 1
  selector:
      matchLabels:
          app: dspdmservice
          role: backend
          env: production
  template:
    metadata:
      name: dspdmservice
      labels:
        app: dspdmservice
        role: backend
        env: production
    spec:
      containers:
      - name: dspdmservice
        image: {IMAGE_TAG}
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 2Gi
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - ls
            - .
          initialDelaySeconds: 10
        readinessProbe:
          exec:
            command:
            - ls
            - .
          initialDelaySeconds: 10
        ports:
        - name: http
          containerPort: 8080
